--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
-  	<title>KillLynx</title>
+  	<title>Rico</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -22,7 +22,7 @@
 			<div class="row justify-content-center">
 				<div class="col-md-7 col-lg-5">
 					<div class="login-wrap p-4 p-md-5">
-						<img class="logo" src="./assets/KL.png">
+						<img class="logo" src="./assets/KL.jpeg">
                     <div class="d-flex">
 		      		<div class="w-100">
 		      			<h3 class="mb-4">Sign In</h3>
