changes in graphics again

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	</head>
 	<body>
 		<nav class="navbar navbar-light bg-warning">
-			<a class="navbar-brand" href="#"><img src="./assets/logo.png"></a>
+			<a class="navbar-brand" href="#"><img src="./assets/dog.png"></a>
 		  </nav>
 	<section class="ftco-section">
 		<div class="container">
