meta info google verification

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   	<title>Ricomanagement</title>
     <meta charset="utf-8">
 	<!-- <meta name="robots" content="noindex"> -->
+	<meta name="google-site-verification" content="ODzQwMYjSoTPmVt-MwnbmXyy3_padK7vrHIBQhvBFow" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
 	<link href="https://fonts.googleapis.com/css?family=Lato:300,400,700&display=swap" rel="stylesheet">
